package behavior.iterator.example;

public interface Aggregate {
    Iterator iterator();
}
