package behavior.iterator.example;

public interface Iterator {
    boolean hasNext();
    Object next();
}
